--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,8 @@
   "trailingSlash": false,
   "redirects": [
     {
-      "source": "/:path*/",
-      "destination": "/:path*",
+      "source": "/:path+/",
+      "destination": "/:path+",
       "permanent": true
     }
   ],
